# python_cli_app_template

./: .gitignore  README.md  justfile  pre-commit  pyproject.toml
${{ carnate.python-skeleton }}/src/${{ carnate.project_name }}/: commands.py
data/: small_sample.csv  template.env
data/stocks/: stock_apple.csv  stock_google.csv  stock_meta.csv  stock_microsoft.csv  stock_pagerduty.csv  stock_petco.csv  stock_sp_industrial_composite_index.csv  stock_zoom.csv
notebooks/: okta_zenq.ju.py  pagerduty_api_calls_to_dataframes.ipynb  pd_remote_call.ju.py  polars-local.ipynb  polars-local.ju.py  polars-syntax-explore.ipynb  remote_call.ipynb  syntax.ju.py  visualization.ipynb  visualization.ju.py
src/${{ carnate.project_name }}/: __init__.py  __main__.py  commands.py  py.typed
tests/: __init__.py  test__main__.py  test_commands.py
